# lever-runner

./: .dockerignore  .env.example  .env.minimal  .gitignore  .pre-commit-config.yaml  AGENT.md  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  DRAFT-HN.md  Dockerfile  Dockerfile.web  INSIGHT.md  Makefile  README.md  TODO.md  docker-compose.yml  fly.toml  init_db.py  install.sh  pyproject.toml  requirements.txt  run_bot.sh
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: smoke.yml
benchmarks/: BENCHMARK-RESULTS.md  results-rtx4050.json  run_gpu_benchmarks.py
blog/: hn-launch-post.md  token-comparison-devto.md  token-comparison.md
browser/: README.md  app.js  demo-README.md  demo.html  index.html  styles.css  web_server.py
browser/pyodide-demo/: index.html  lever_core.py  style.css  worker.js
community/: README.md  k8s-ops.jsonl
demo/: README.md  demo-script.sh  demo.py
docs/: BROWSER-STRATEGY.md  FUTURE-INTEGRATION.md  QUICKSTART.md
experiments/: embedding_quality.py  embedding_results.json  neural_embedder.pt  neural_embedder_v2.pt  neural_embedder_v2_results.json  train_embedder.py  train_embedder_v2.py
gpu/: Makefile  benchmark.py  tile_search.cu  tile_search.ptx
memory/: JOURNAL.md
packs/: devops.jsonl  git.jsonl  python.jsonl  security.jsonl  system.jsonl
results/: metal-stress-test.json  tensor-core-bench.json
skills/: README.md  data.md  devops.md  git.md  python.md  security.md
src/lever_runner/: __init__.py  __main__.py  auto_promote.py  benchmark.py  bot.py  cli.py  cuda_backend.py  cuda_kernels.py  doctor.py  executor.py  export_nail.py  fastloop.py  fastloop_bridge.py  http_api.py  intent_extractor.py  orchestrator.py  seed_export.py  seed_import.py  store.py  token_logger.py
systemd/: lever-runner-bot.service  lever-runner-http-api.service
tests/: conftest.py  helpers.py  smoke.py  test_bot.py  test_cli_subcommands.py  test_cuda_backend.py  test_embeddings.py  test_export_nail.py  test_fastloop.py  test_fastloop_bridge.py  test_params.py  test_three_gate.py
web/: dashboard.html  index.html
